--- a/package.json
+++ b/package.json
@@ -13,25 +13,29 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.9",
-    "@astrojs/mdx": "^2.2.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.0.6",
     "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.1",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.4",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/lora": "^5.0.16",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
-    "astro": "^4.5.6",
+    "astro": "^5.1.7",
+    "astro-embed": "^0.9.0",
+    "astro-light-box": "^0.1.1",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.0",
+    "devicons-astro": "^0.3.3",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.32.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "rehype": "^13.0.2",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
